<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AddCoursePage</class>
 <widget class="QDialog" name="AddCoursePage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1195</width>
    <height>585</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Add Course Page</string>
  </property>
  <property name="styleSheet">
   <string notr="true">/*Copyright (c) DevSec Studio. All rights reserved.
font: 700 9pt &quot;Microsoft PhagsPa&quot;;

MIT License

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the &quot;Software&quot;), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED *AS IS*, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
*/

/*-----QWidget-----*/
QWidget
{
	background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #04456c, stop:0.33 #06183a, stop:0.67 #3d1437, stop:1 #231437);

	color: #000000;
	border-color: #000000;

}


/*-----QLabel-----*/
QLabel
{
	background-color: #292f45;
	color: #b9b9bb;
	border-color: #000000;

}


/*-----QPushButton-----*/
QPushButton
{
	background-color: #f0742f;
	color: #fff;
	font-weight: bold;
	border-style: solid;
	border-width: 1px;
	border-radius: 17px;
	border-color: #f0742f;
	padding: 10px;

}


QPushButton::hover
{
	background-color: #fc7c11;
	color: #fff;

}


QPushButton::pressed
{
	background-color: #ff6b35;
	color: #fff;

}


/*-----QToolButton-----*/
QToolButton
{
	background-color: #292f45;
	color: #000000;
	border-style: solid;
	border-color: #000000;

}


QToolButton::hover
{
	background-color: #fc7c11;
	color: #000000;
	padding: 2px;
	border-radius: 15px;
	border-color: #fc7c11;

}


QToolButton::pressed
{
	background-color: #fc7c11;
	color: #000000;
	border-style: solid;
	border-width: 2px;

}


/*-----QLineEdit-----*/
QLineEdit{
	background-color: rgb(255, 255, 255);
	color: #b9b9bb;
	font-weight: bold;
	border-style: solid;
	border-width: 2px;
	border-top: 0px;
	border-left: 0px;
	border-right: 0px;
	border-color: #b9b9bb;
	padding: 10px;

}


/*-----QCheckBox-----*/
QCheckBox
{
	background-color: transparent;
	color: #b9b9bb;
	font-weight: bold;

}


QCheckBox::indicator
{
    color: #b1b1b1;
    background-color: #00111d;
    border: 1px solid #f0742f;
    width: 12px;
    height: 12px;

}


QCheckBox::indicator:checked
{
    image:url(&quot;./ressources/check.png&quot;); /*To replace*/
	background-color: #1f2b2b;
    border: 1px solid #f0742f;

}


QCheckBox::indicator:unchecked:hover
{
    border: 1px solid #f0742f;

}


QCheckBox::disabled
{
	color: #656565;

}


QCheckBox::indicator:disabled
{
	background-color: #656565;
	color: #656565;
    border: 1px solid #656565;

}
</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_5">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_5">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="0,0">
       <item>
        <widget class="QLabel" name="name">
         <property name="font">
          <font>
           <pointsize>15</pointsize>
           <bold>true</bold>
          </font>
         </property>
         <property name="styleSheet">
          <string notr="true">color:#ffffff;
 font-weight: bold;
background: None;</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="text">
          <string>Name</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="nameLineEdit">
         <property name="styleSheet">
          <string notr="true">  position: relative;
  display: inline-block;
  height: 32px;
  width: 220px;
  margin: 0;
  padding: 0;
  background-color: #fff;
  border: none;
  border-radius: 10px;
color:#0d0d0d;</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <property name="spacing">
        <number>30</number>
       </property>
       <item>
        <widget class="QLabel" name="code">
         <property name="font">
          <font>
           <pointsize>15</pointsize>
           <bold>true</bold>
          </font>
         </property>
         <property name="styleSheet">
          <string notr="true">color:#ffffff;
 font-weight: bold;
background: None;</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="text">
          <string>code</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="codeLineEdit">
         <property name="styleSheet">
          <string notr="true">  position: relative;
  display: inline-block;
  height: 32px;
  width: 220px;
  margin: 0;
  padding: 0;
  background-color: #fff;
  border: none;
  border-radius: 10px;
color:#0d0d0d;</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,1">
       <property name="spacing">
        <number>20</number>
       </property>
       <item>
        <widget class="QLabel" name="Hall">
         <property name="font">
          <font>
           <pointsize>15</pointsize>
           <bold>true</bold>
          </font>
         </property>
         <property name="styleSheet">
          <string notr="true">color: #ffffff;
 font-weight: bold;
background: None;</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="text">
          <string>Hall</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="lecHallCBox">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="baseSize">
          <size>
           <width>0</width>
           <height>0</height>
          </size>
         </property>
         <property name="styleSheet">
          <string notr="true">QComboBox {
	color: #a9b7c6;	
	background: #ffffff;
}
QComboBox:editable {
	background: #ffffff;
	color: #a9b7c6;
	selection-background-color: #1e1d23;
}
QComboBox QAbstractItemView {
	color: #0d0d0d;;	
	background: #ffffff;
	selection-color: #FFFFFF;
	selection-background-color: #1e1d23;
}
QComboBox:!editable:on, QComboBox::drop-down:editable:on {
	color: #0d0d0d;;	
	background: #ffffff;
}
</string>
         </property>
         <property name="insertPolicy">
          <enum>QComboBox::InsertAlphabetically</enum>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1,1">
       <property name="spacing">
        <number>20</number>
       </property>
       <item>
        <widget class="QLabel" name="Time">
         <property name="font">
          <font>
           <pointsize>15</pointsize>
           <bold>true</bold>
          </font>
         </property>
         <property name="styleSheet">
          <string notr="true">color: #ffffff;
 font-weight: bold;
background: None;</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="text">
          <string>Time</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="dayComboBox">
         <property name="styleSheet">
          <string notr="true">QComboBox {
	color: #a9b7c6;	
	background: #ffffff;
}
QComboBox:editable {
	background: #ffffff;
	color: #a9b7c6;
	selection-background-color: #1e1d23;
}
QComboBox QAbstractItemView {
	color: #a9b7c6;	
	background: #ffffff;
	selection-color: #FFFFFF;
	selection-background-color: #1e1d23;
}
QComboBox:!editable:on, QComboBox::drop-down:editable:on {
	color: #a9b7c6;	
	background: #ffffff;
}</string>
         </property>
         <property name="insertPolicy">
          <enum>QComboBox::InsertAlphabetically</enum>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="timeComboBox">
         <property name="styleSheet">
          <string notr="true">background-color: rgb(255, 255, 255);</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_7">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_6">
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="QLabel" name="students">
           <property name="font">
            <font>
             <pointsize>-1</pointsize>
             <bold>true</bold>
            </font>
           </property>
           <property name="styleSheet">
            <string notr="true">color:#ffffff;
 font-weight: bold;
background: None;
font-size: 20px;
border: 2px solid white;</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::Box</enum>
           </property>
           <property name="text">
            <string>Students:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QTableWidget" name="allStudentsTable">
           <property name="styleSheet">
            <string notr="true">QWidget {
    background-color: rgb(255, 241, 233);
    color: #ffffff;
 font-weight: bold;
}

QHeaderView::section {
    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(254, 86, 106, 255), stop:1 rgba(213, 21, 53, 255));
    padding: 4px;
    border: 1px solid #fffff8;
    font-size: 16pt;
}

QTableWidget {
    gridline-color: #fffff8;
    font-size: 14pt;
}

QTableView::item 
{
    font-size: 14pt;
	color: rgb(0, 0, 0);
    font-size: 14pt;
}
</string>
           </property>
           <property name="editTriggers">
            <set>QAbstractItemView::NoEditTriggers</set>
           </property>
           <property name="alternatingRowColors">
            <bool>true</bool>
           </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::SingleSelection</enum>
           </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectRows</enum>
           </property>
           <property name="sortingEnabled">
            <bool>true</bool>
           </property>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>true</bool>
           </attribute>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QLabel" name="students_2">
           <property name="font">
            <font>
             <pointsize>-1</pointsize>
             <bold>true</bold>
            </font>
           </property>
           <property name="styleSheet">
            <string notr="true">color:#ffffff;
 font-weight: bold;
background: None;
font-size: 20px;
border: 2px solid white;</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::Box</enum>
           </property>
           <property name="text">
            <string>Added students:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QTableWidget" name="addedStudentsTable">
           <property name="styleSheet">
            <string notr="true">QWidget {
    background-color: rgb(255, 241, 233);
    color: #ffffff;
 font-weight: bold;
}

QHeaderView::section {
    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(254, 86, 106, 255), stop:1 rgba(213, 21, 53, 255));
    padding: 4px;
    border: 1px solid #fffff8;
    font-size: 16pt;
}

QTableWidget {
    gridline-color: #fffff8;
    font-size: 14pt;
}

QTableView::item 
{
    font-size: 14pt;
	color: rgb(0, 0, 0);
    font-size: 14pt;
}
</string>
           </property>
           <property name="editTriggers">
            <set>QAbstractItemView::NoEditTriggers</set>
           </property>
           <property name="alternatingRowColors">
            <bool>true</bool>
           </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::SingleSelection</enum>
           </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectRows</enum>
           </property>
           <property name="sortingEnabled">
            <bool>true</bool>
           </property>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>true</bool>
           </attribute>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
          <widget class="QLabel" name="professors">
           <property name="font">
            <font>
             <pointsize>-1</pointsize>
             <bold>true</bold>
            </font>
           </property>
           <property name="styleSheet">
            <string notr="true">color:#ffffff;
 font-weight: bold;
background: None;
font-size: 20px;
border: 2px solid white;</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::Box</enum>
           </property>
           <property name="text">
            <string>Professors:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QTableWidget" name="allProfessorsTable">
           <property name="styleSheet">
            <string notr="true">QWidget {
    background-color: rgb(255, 241, 233);
    color: #ffffff;
 font-weight: bold;
}

QHeaderView::section {
    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(254, 86, 106, 255), stop:1 rgba(213, 21, 53, 255));
    padding: 4px;
    border: 1px solid #fffff8;
    font-size: 16pt;
}

QTableWidget {
    gridline-color: #fffff8;
    font-size: 14pt;
}

QTableView::item 
{
    font-size: 14pt;
	color: rgb(0, 0, 0);
    font-size: 14pt;
}
</string>
           </property>
           <property name="editTriggers">
            <set>QAbstractItemView::NoEditTriggers</set>
           </property>
           <property name="alternatingRowColors">
            <bool>true</bool>
           </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::SingleSelection</enum>
           </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectRows</enum>
           </property>
           <property name="sortingEnabled">
            <bool>true</bool>
           </property>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>true</bool>
           </attribute>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
          <widget class="QLabel" name="professors_2">
           <property name="font">
            <font>
             <pointsize>-1</pointsize>
             <bold>true</bold>
            </font>
           </property>
           <property name="styleSheet">
            <string notr="true">color:#ffffff;
 font-weight: bold;
background: None;
font-size: 20px;
border: 2px solid white;</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::Box</enum>
           </property>
           <property name="text">
            <string>Added professors:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QTableWidget" name="addedProfessorsTable">
           <property name="styleSheet">
            <string notr="true">QWidget {
    background-color: rgb(255, 241, 233);
    color: #ffffff;
 font-weight: bold;
}

QHeaderView::section {
    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(254, 86, 106, 255), stop:1 rgba(213, 21, 53, 255));
    padding: 4px;
    border: 1px solid #fffff8;
    font-size: 16pt;
}

QTableWidget {
    gridline-color: #fffff8;
    font-size: 14pt;
}

QTableView::item 
{
    font-size: 14pt;
	color: rgb(0, 0, 0);
    font-size: 14pt;
}
</string>
           </property>
           <property name="editTriggers">
            <set>QAbstractItemView::NoEditTriggers</set>
           </property>
           <property name="alternatingRowColors">
            <bool>true</bool>
           </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::SingleSelection</enum>
           </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectRows</enum>
           </property>
           <property name="sortingEnabled">
            <bool>true</bool>
           </property>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>true</bool>
           </attribute>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_8">
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="addPushButton">
       <property name="font">
        <font>
         <family>Gilroy</family>
         <pointsize>14</pointsize>
         <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
        <string notr="true">background: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(254, 86, 106, 255), stop:1 rgba(213, 21, 53, 255));
border: none;
font-family: Gilroy,sans-serif;
</string>
       </property>
       <property name="text">
        <string>Add</string>
       </property>
       <property name="icon">
        <iconset>
         <selectedoff>:/new/img/add.png</selectedoff>
        </iconset>
       </property>
       <property name="iconSize">
        <size>
         <width>37</width>
         <height>37</height>
        </size>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
